<resources>
    <string name="app_name">Spork</string>
    <string name="facebook_app_id">551082753359276</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">5d50ed4a0d3465f38d9c0b221aa4d84b</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="website">Visit the restaurant</string>
    <string name="add_review">Add Review</string>
    <string name="loved_it">Loved it 😍</string>
    <string name="okay">Ok 😬</string>
    <string name="dislike">Disliked it 😔</string>
    <string name="price">Price</string>
    <string name="rating">Rating</string>
    <string name="popularity">Popularity</string>
    <string name="done">Done</string>
    <string name="proximity">Proximity</string>
    <string-array name="preferences_array">
        <item>Very important</item>
        <item>Important</item>
        <item>Neutral</item>
        <item>Unimportant</item>
        <item>Very unimportant</item>
    </string-array>
</resources>