<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.PreferencesActivity">

    <TextView
        android:id="@+id/tvPreferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="What's important to you?"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/tvPreferenceDescription"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Tell us your preferences and we will handpick the best recommendations suited for you."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPreferences"
        app:layout_constraintVertical_bias="0.012" />

    <CheckBox
        android:id="@+id/cbPrice"
        android:layout_width="125dp"
        android:layout_height="51dp"
        android:layout_marginTop="28dp"
        android:text="@string/price"
        android:onClick="onCheckboxClicked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPreferenceDescription" />

    <CheckBox
        android:id="@+id/cbRating"
        android:layout_width="125dp"
        android:layout_height="51dp"
        android:text="@string/rating"
        android:onClick="onCheckboxClicked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbPrice" />

    <CheckBox
        android:id="@+id/cbPopularity"
        android:layout_width="125dp"
        android:layout_height="51dp"
        android:text="@string/popularity"
        android:onClick="onCheckboxClicked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbRating" />

    <CheckBox
        android:id="@+id/cbProximity"
        android:layout_width="125dp"
        android:layout_height="51dp"
        android:text="@string/proximity"
        android:onClick="onCheckboxClicked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbPopularity" />

    <Button
        android:id="@+id/btnDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbProximity"
        app:layout_constraintVertical_bias="0.117" />

</androidx.constraintlayout.widget.ConstraintLayout>