<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tvDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/blue_700"
        android:text="How was your experience?"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white" />


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="3dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_love"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/loved_it" />

        <RadioButton
            android:id="@+id/radio_okay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/okay" />

        <RadioButton
            android:id="@+id/radio_dislike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/dislike" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvThoughts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Share your thoughts" />

    <EditText
        android:id="@+id/etReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"/>

</LinearLayout>